# OpenConstructionERP

./: .env.example  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  HANDOFF.md  MODULES.md  NOTICE  README.md  SECURITY.md  TRADEMARK.md  docker-compose.quickstart.yml  package-lock.json  package.json
.claude/: ecc-tools.json  identity.json
.claude/commands/: add-database-table-or-schema-migration.md  feature-development.md  release-version-bump.md
.codex/: AGENTS.md
.github/: dependabot.yml
.github/workflows/: authors-guard.yml  benson-verify.yml  ci-full.yml  ci-postgres.yml  ci.yml  cla.yml  codeql.yml  dependency-review.yml  desktop-release.yml  e2e-cross-os.yml  eval-match.yml  homepage-loops.yml  module-captures.yml  pypi-publish.yml  release.yml  repo-hygiene.yml  sbom-and-licenses.yml  scorecard.yml
backend/: .env.example  README.md  alembic.ini  openconstructionerp-server.spec  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  __main__.py  cli.py  cli_static.py  config.py  database.py  dependencies.py  main.py  schemas.py
backend/tests/: _embedded_pg_fixture.py  _pg.py  conftest.py
benson-app/: .gcloudignore  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  cloudbuild.yaml  compose.yaml  nginx.cloudrun.conf  package.json
benson-app/api/: .env.example  Dockerfile  INTEGRATIONS.md  pyproject.toml
benson-app/api/app/: __init__.py  accounting_provider.py  accounting_store.py  ai_gateway.py  ai_routes.py  ai_store.py  asset_routes.py  auth.py  change_order_domain.py  change_order_evidence_store.py  change_order_routes.py  change_order_schema.py  change_order_store.py  compliance.py  config.py  customer_routes.py  customer_store.py  dependencies.py  directory_provider.py  domain.py  employee_document_store.py  employee_store.py  employee_task_store.py  estimate_routes.py  estimate_store.py  field_record_domain.py  field_record_routes.py  field_record_store.py  finance_accounting_outbox.py  finance_domain.py  finance_journal_accounts.py  finance_quickbooks_outbox.py  finance_schema.py  identity_provisioning_routes.py  identity_provisioning_store.py  identity_provisioning_worker.py  integration_audit.py  job_routes.py  job_store.py  lead_routes.py  (+27 more)
benson-app/api/app/integrations/: __init__.py  config.py  google_ads.py  google_auth.py  google_business.py  meta_capi.py  models.py  privacy.py  transport.py
benson-app/api/contracts/: marketing-attribution.schema.json  provider-outbox.schema.json  public-inquiry.normalized.schema.json  public-inquiry.raw.schema.json
benson-app/api/migrations/: 20260716_01_logistics_foundation.sql  20260716_02_customers.sql  20260716_03_estimates.sql  20260716_04_jobs.sql  20260716_05_schedule.sql  20260716_06_field_records.sql  20260716_07_change_orders.sql  20260716_08_onboarding_completion.sql  20260719_09_employee_credentials.sql
benson-app/api/scripts/: __init__.py  migrate_legacy_leads.py
benson-app/api/tests/: conftest.py  support.py  test_ai_gateway.py  test_api.py  test_asset_routes.py  test_auth.py  test_change_order_migration_contract.py  test_change_orders.py  test_customer_migration_contract.py  test_customers.py  test_employee_foundation.py  test_employee_tasks.py  test_estimate_migration_contract.py  test_estimates.py  test_field_record_migration_contract.py  test_field_records.py  test_file_size.py  test_finance_domain.py  test_integration_audit.py  test_integrations.py  test_job_migration_contract.py  test_jobs.py  test_logistics_migration_contract.py  test_message_templates.py  test_onboarding_automation.py  test_onboarding_migration_contract.py  test_operations.py  test_schedule.py  test_schedule_audit_paging.py  test_schedule_job_coupling.py  test_schedule_migration_contract.py  test_schedule_postgres_locking.py  test_system.py
benson-app/docs/: customer-workflow-evidence.md  estimate-workflow-evidence.md  full-erp-completion-matrix.md  job-workflow-evidence.md  logistics-database-foundation.md  module-coverage.md  onboarding-compliance-matrix.md  production-cutover-evidence.md  schedule-workflow-evidence.md
benson-app/fcc-gateway/: Dockerfile  cloudbuild.yaml
benson-app/skills/: registry.json
desktop/: README.md  build-sidecar.sh  pyinstaller.spec
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src-tauri/windows/: hooks.nsh
docs/: INSTALL_LINUX.md  README.md  US_COST_DATABASE_METHODOLOGY.md  docs.html
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.captures.config.ts  playwright.homepage-loops.config.ts  playwright.smoke-all.config.ts  vite.config.ts
marketing-site/: Caddyfile  contact.html  demo-register-api.py  demo-register.html  docs.html  download.html  index.html  industries.html  license-request.html  llms.txt  news.html  partners.html  services.html  standards.html
packs/south-africa/: README.md  pyproject.toml
packs/south-africa/src/openconstructionerp_south_africa/: __init__.py  manifest.py  onboarding.yaml
packs/south-africa/src/openconstructionerp_south_africa/locales/: en-ZA.json
packs/south-africa/src/openconstructionerp_south_africa/rule_packs/: asaqs_measurement.json  cidb_grading.json  ipdm_procurement_gates.json  pppfa_preferential_procurement.json  sans_1200_measurement.json
scripts/: brand_token_allowlist.txt  check_no_brand_tokens.py  check_repo_hygiene.py
signatures/: cla.json
website-marketing/: index.html
(+4158 files in other folders)
